--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@types/react-native": "^0.72.8",
@@ -40,7 +42,11 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.19.10"
+    "react-native-text-input-mask": "^3.2.0",
+    "react-native-web": "~0.19.10",
+    "uuid": "^11.0.3",
+    "expo-image-picker": "~15.0.7",
+    "expo-dev-client": "~4.0.29"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
